# notebooklm-mcp-cli

./: .gh_comment_body.md  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  notebooklm-cli.skill  pr146.diff  pyproject.toml
.agent/: gh_dump.json  new_issues.json  pr135.diff  pr138.diff
.github/workflows/: lint-test.yml  publish.yml
desktop-extension/: manifest.json  run_server.py
docs/: API_REFERENCE.md  AUTHENTICATION.md  CLI_GUIDE.md  FILE_UPLOAD_IMPLEMENTATION.md  GETTING_STARTED.md  MCP_CLI_TEST_PLAN.md  MCP_GUIDE.md  REMOTE_MCP.md  WSL_SETUP.md  security-scan-report-2026-04-12.md  security-scan-report-2026-04-15.md  security-scan-report-2026-04-16.md  security-scan-report-2026-04-18.md  security-scan-report-2026-04-22.md  security-scan-report-2026-04-27.md  security-scan-report-2026-05-01.md  security-scan-report-2026-05-04.md  security-scan-report-2026-05-05.md  security-scan-report-2026-05-10.md  security-scan-report-2026-05-14.md  security-scan-report-2026-05-18.md  security-scan-report-2026-05-23.md  security-scan-report-2026-05-28.md  security-scan-report-2026-06-02.md  security-scan-report-2026-06-05.md  security-scan-report-2026-06-10.md  security-scan-report-2026-06-21.md  security-scan-report-2026-07-01.md  security-scan-report-2026-07-02.md  security-scan-report-2026-07-04.md  security-scan-report-2026-07-07.md  security-scan-report-2026-07-11.md  security-scan-report-2026-07-15.md  security-scan-report-2026-07-16.md  security-scan-report-2026-07-17.md
docs/releases/: v0.8.2.md  v0.8.3.md
scripts/: test_label_rpcs.py
security reports/: security-scan-report-2026-03-17.md  security-scan-report-2026-04-05.md  security-scan-report-2026-04-11.md
src/notebooklm_tools/: __init__.py
tests/: conftest.py  test_auth_browser.py  test_auth_migration.py  test_cdp_port_map.py  test_cdp_url_check.py  test_cookie_parsing.py  test_file_upload.py  test_io_encoding_windows.py  test_mcp_auth_studio_failures.py  test_mcp_chat.py  test_mcp_e2e.py  test_mcp_file_upload.py  test_mcp_sources.py  test_mcp_studio.py  test_profile_aware_headless_auth.py  test_snap.py  test_tool_groups.py
tests/cli/: test_formatters.py  test_json_parity.py  test_login.py  test_source_add.py  test_source_list.py  test_studio_cli.py  test_verbs_parity.py
tests/core/: test_auth_check.py  test_base.py  test_cdp_transport.py  test_conversation.py  test_cookie_rotation.py  test_download.py  test_notebooks.py  test_retry.py  (+9 more)
(+103 files in other folders)
